--- a/_config.yml
+++ b/_config.yml
@@ -27,18 +27,18 @@ description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://glunkad.github.io/blogs'
 
 github:
-  username: github_username             # change to your github username
+  username: glunkad             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: _glunkad            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: Gunjan Lunkad
   email: example@domain.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
